--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 PORT=5001
-MONGO_URI=mongodb+srv://Bhavya_Jain:<db_password>@clubnexus.shou7df.mongodb.net/?appName=ClubNexus
+MONGO_URI=mongodb+srv://Bhavya_Jain:Bhavya1234@clubnexus.shou7df.mongodb.net/?appName=ClubNexus
 JWT_SECRET=mysecretkey123
